<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="338dp"
        android:layout_height="218dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167">

        <RadioButton
            android:id="@+id/rbop1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rbop1"
            android:text="@string/rbop1" />

        <RadioButton
            android:id="@+id/rbop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rbop2"
            android:text="@string/rbop2" />

        <RadioButton
            android:id="@+id/rbop3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rbop3"
            android:text="@string/rbop3" />

        <RadioButton
            android:id="@+id/rbop4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rbop4"
            android:text="@string/rbop4" />
    </RadioGroup>

    <EditText
        android:id="@+id/ednum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ingresar un valor" />

    <EditText
        android:id="@+id/ednum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        tools:text="Ingresar un valor" />

    <Button
        android:id="@+id/btncalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btncalcular"
        android:text="Calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <TextView
        android:id="@+id/tvresultado"
        android:layout_width="181dp"
        android:layout_height="41dp"
        android:hint="@string/tvresultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />
</androidx.constraintlayout.widget.ConstraintLayout>